--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,8 @@ jobs:
       fail-fast: false
       matrix:
         go:
-          - '1.18'
-          - '1.19'
-          - '1.20'
+          - stable
+          - oldstable
 
     steps:
       - uses: actions/checkout@v4
